fixed responsive/mobile table bug that was causing td's to collapse when empty

--- a/static/css/en-style.css
+++ b/static/css/en-style.css
@@ -308,6 +308,10 @@ table td::before {
 	font-weight: bold;
 }
 
+table td {
+	min-height: 25px;
+}
+
 
 
 /*detail page*/
